public interface Report {
    public String getReport();
}
